--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -4,6 +4,22 @@ on:
   push:
 
 jobs:
+  fix-code-style:
+    
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
+      with:
+        php-version: '8.0'
+    - uses: actions/checkout@v3
+    - name: Install Dependencies
+      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+    - name: Directory Permissions
+      run: chmod -R 777 storage bootstrap/cache
+    - name: Run Pint to find and fix code style issues
+      run: vendor/bin/pint
+
   laravel-tests:
 
     services:
