--- a/.github/workflows/pint.yml
+++ b/.github/workflows/pint.yml
@@ -11,7 +11,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
+        with:
+          php-version: '8.0'
       - uses: actions/checkout@v3
+      - name: Install Dependencies
+        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
       - name: Run Pint to find and fix code style issues
         run: vendor/bin/pint
       - uses: stefanzweifel/git-auto-commit-action@v4
