--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
             - schedule_api
 
     database:
-        image: mariadb:10.1
+        image: mariadb:latest
         container_name: schedule_api_database
         command: --default-authentication-plugin=mysql_native_password
         restart: unless-stopped
