Add user in php Dockerfile

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,5 +1,7 @@
 FROM php:8.1-fpm
 
+WORKDIR /var/www
+
 RUN apt-get update && apt-get install -y \
         procps\
         libzip-dev \
@@ -7,6 +9,12 @@ RUN apt-get update && apt-get install -y \
     && docker-php-ext-install zip \
     && docker-php-ext-install pdo pdo_mysql
 
-WORKDIR /var/www
-
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+
+RUN useradd -u 1000 -ms /bin/bash app
+
+COPY --chown=app:app . /var/www
+
+USER app
+
+EXPOSE 9000
