--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -7,7 +7,8 @@ RUN apt-get update && apt-get install -y \
         libzip-dev \
         zip \
     && docker-php-ext-install zip \
-    && docker-php-ext-install pdo pdo_mysql
+    && docker-php-ext-install pdo pdo_mysql \
+    && docker-php-ext-install iconv
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
