--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -7,11 +7,13 @@ jobs:
   laravel-tests:
 
     services:
-      mysql:
-        image: mysql:8
+      database:
+        image: mariadb:latest
+        container_name: schedule_api_database
+        command: --default-authentication-plugin=mysql_native_password
         env:
-          MYSQL_DATABASE: laravel
-          MYSQL_ROOT_PASSWORD: root
+          MYSQL_DATABASE: schedule
+          MYSQL_ROOT_PASSWORD: password
         ports:
           - 3306:3306
 
@@ -33,9 +35,9 @@ jobs:
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
         DB_CONNECTION: mysql
-        DB_DATABASE: laravel
-        DB_HOST: mysql
+        DB_HOST: schedule_api_database
         DB_PORT: 3306
+        DB_DATABASE: schedule
         DB_USERNAME: root
-        DB_PASSWORD: root
+        DB_PASSWORD: password
       run: vendor/bin/phpunit
