--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -9,7 +9,6 @@ jobs:
     services:
       database:
         image: mariadb:latest
-        container_name: schedule_api_database
         command: --default-authentication-plugin=mysql_native_password
         env:
           MYSQL_DATABASE: schedule
@@ -35,7 +34,7 @@ jobs:
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
         DB_CONNECTION: mysql
-        DB_HOST: schedule_api_database
+        DB_HOST: database
         DB_PORT: 3306
         DB_DATABASE: schedule
         DB_USERNAME: root
