--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
         DB_CONNECTION: mysql
-        DB_HOST: database
+        DB_HOST: localhost
         DB_PORT: 3306
         DB_DATABASE: schedule
         DB_USERNAME: root
