--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
 
     services:
-      database:
+      schedule_api_database:
         image: mariadb:latest
         env:
           MYSQL_DATABASE: schedule
@@ -31,11 +31,4 @@ jobs:
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
     - name: Execute tests (Unit and Feature tests) via PHPUnit
-      env:
-        DB_CONNECTION: mysql
-        DB_HOST: localhost
-        DB_PORT: 3306
-        DB_DATABASE: schedule
-        DB_USERNAME: root
-        DB_PASSWORD: password
       run: vendor/bin/phpunit
