--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
 
     services:
-      schedule_api_database:
+      database:
         image: mariadb:latest
         env:
           MYSQL_DATABASE: schedule
@@ -31,4 +31,6 @@ jobs:
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
     - name: Execute tests (Unit and Feature tests) via PHPUnit
+      env:
+        DB_HOST: 127.0.0.1
       run: vendor/bin/phpunit
