--- a/.env.example
+++ b/.env.example
@@ -20,15 +20,16 @@ DB_USERNAME=root
 DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=redis
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_HOST=127.0.0.1
+REDIS_USERNAME=default
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
