--- a/.env.example
+++ b/.env.example
@@ -20,16 +20,15 @@ DB_USERNAME=root
 DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=redis
+CACHE_DRIVER=file
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=redis
+QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_HOST=127.0.0.1
-REDIS_USERNAME=default
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
