Updated `.env.example` and `.env.ci`

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,7 @@ DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
+CACHE_PREFIX=cache
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=redis
 SESSION_DRIVER=file
@@ -32,6 +33,8 @@ REDIS_HOST=127.0.0.1
 REDIS_USERNAME=default
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+REDIS_PREFIX="${APP_NAME}:"
+REDIS_QUEUE=queue
 
 MAIL_MAILER=smtp
 MAIL_HOST=mailhog
