--- a/.env.ci
+++ b/.env.ci
@@ -20,21 +20,17 @@ DB_USERNAME=root
 DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=redis
-CACHE_PREFIX=cache
+CACHE_DRIVER=file
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=redis
+QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_HOST=127.0.0.1
-REDIS_USERNAME=default
 REDIS_PASSWORD=null
 REDIS_PORT=6379
-REDIS_PREFIX="${APP_NAME}:"
-REDIS_QUEUE=queue
 
 MAIL_MAILER=smtp
 MAIL_HOST=mailhog
